--- a/Terrain/Terrain.vcxproj
+++ b/Terrain/Terrain.vcxproj
@@ -54,7 +54,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;_CRT_SECURE_NO_WARNINGS;_USE_32BIT_TIME_T;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>H:\Source\SDK\SDL\include;H:\SDK\Cg\include\Cg;H:\SDK\devIL\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>H:\Source\SDK\SDL\include;H:\SDK\Cg\include\;H:\SDK\devIL\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -88,6 +88,7 @@
     <ClCompile Include="CAnim.cpp" />
     <ClCompile Include="CFigure.cpp" />
     <ClCompile Include="CForest.cpp" />
+    <ClCompile Include="Cg.cpp" />
     <ClCompile Include="CGrass.cpp" />
     <ClCompile Include="CPage.cpp" />
     <ClCompile Include="CTerrain.cpp" />
@@ -134,6 +135,7 @@
     <ClInclude Include="Canim.h" />
     <ClInclude Include="CFigure.h" />
     <ClInclude Include="CForest.h" />
+    <ClInclude Include="Cg.h" />
     <ClInclude Include="CGrass.h" />
     <ClInclude Include="Cpage.h" />
     <ClInclude Include="CTerrain.h" />
