--- a/Terrain/Terrain.vcxproj
+++ b/Terrain/Terrain.vcxproj
@@ -54,7 +54,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;_CRT_SECURE_NO_WARNINGS;_USE_32BIT_TIME_T;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>H:\Source\SDK\SDL\include;H:\SDK\Cg\include\;H:\SDK\devIL\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>H:\Source\SDK\SDL\include;H:\SDK\Cg\include\;H:\SDK\devIL\include;H:\SDK\glConsole;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -91,6 +91,7 @@
     <ClCompile Include="Cg.cpp" />
     <ClCompile Include="CGrass.cpp" />
     <ClCompile Include="CGrid.cpp" />
+    <ClCompile Include="Console.cpp" />
     <ClCompile Include="CPage.cpp" />
     <ClCompile Include="CTerrain.cpp" />
     <ClCompile Include="CTree.cpp" />
@@ -119,7 +120,6 @@
     <ClCompile Include="glVector3.cpp" />
     <ClCompile Include="Ini.cpp" />
     <ClCompile Include="Input.cpp" />
-    <ClCompile Include="Log.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Math.cpp" />
     <ClCompile Include="Render.cpp" />
@@ -139,6 +139,7 @@
     <ClInclude Include="Cg.h" />
     <ClInclude Include="CGrass.h" />
     <ClInclude Include="CGrid.h" />
+    <ClInclude Include="Console.h" />
     <ClInclude Include="Cpage.h" />
     <ClInclude Include="CTerrain.h" />
     <ClInclude Include="CTree.h" />
@@ -149,7 +150,6 @@
     <ClInclude Include="glTypes.h" />
     <ClInclude Include="Ini.h" />
     <ClInclude Include="Input.h" />
-    <ClInclude Include="Log.h" />
     <ClInclude Include="Main.h" />
     <ClInclude Include="Math.h" />
     <ClInclude Include="Random.h" />
