--- a/CVars/CVars.csproj
+++ b/CVars/CVars.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="src\Trie.cs" />
     <Compile Include="src\TrieNodeType.cs" />
   </ItemGroup>
   <ItemGroup>
