--- a/CVars/CVars.csproj
+++ b/CVars/CVars.csproj
@@ -40,10 +40,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CVar.cs" />
+    <Compile Include="src\CVarManager.cs" />
     <Compile Include="CVarTypes\IntVar.cs" />
     <Compile Include="Interfaces\ICVarValue.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="src\CVar.cs" />
+    <Compile Include="src\CVarT.cs" />
+    <Compile Include="src\CVarParser.cs" />
     <Compile Include="src\Trie.cs" />
     <Compile Include="src\TrieNodeType.cs" />
   </ItemGroup>
