--- a/CVars/CVars.csproj
+++ b/CVars/CVars.csproj
@@ -30,6 +30,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="OpenTK, Version=1.1.0.0, Culture=neutral, PublicKeyToken=bad199fe84eb3df4, processorArchitecture=MSIL">
+      <HintPath>..\packages\OpenTK.1.1.1589.5942\lib\NET40\OpenTK.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -40,18 +44,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CVar.cs" />
+    <Compile Include="GLConsole\ConsoleLine.cs" />
+    <Compile Include="src\CVar.cs" />
     <Compile Include="src\CVarManager.cs" />
     <Compile Include="CVarTypes\IntVar.cs" />
     <Compile Include="Interfaces\ICVarValue.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="src\CVarT.cs" />
     <Compile Include="src\CVarParser.cs" />
+    <Compile Include="GLConsole\LineProperty.cs" />
     <Compile Include="src\Trie.cs" />
     <Compile Include="src\TrieNodeType.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="docs\doxygen.cfg" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="include\CVars\" />
@@ -60,7 +67,10 @@
     <Compile Include="src\TrieNode.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="src\GLConsole.cs" />
+    <Compile Include="GLConsole\GLConsole.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="GLConsole\GLFont.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
