--- a/terrain-sharp/terrain-sharp.csproj
+++ b/terrain-sharp/terrain-sharp.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Source\Extensions\Color4Extension.cs" />
     <Compile Include="Source\GLmesh.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -68,6 +69,8 @@
     <Compile Include="Source\StdAfx\StdAfx.cs" />
     <Compile Include="Source\StdAfx\SurfaceColor.cs" />
     <Compile Include="Source\StdAfx\SurfaceType.cs" />
+    <Compile Include="Source\Utils\Color4Utils.cs" />
+    <Compile Include="Source\Utils\MathUtils.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
