--- a/terrain-sharp/packages.config
+++ b/terrain-sharp/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="MathNet.Numerics" version="3.8.0" targetFramework="net46" />
   <package id="OpenTK" version="1.1.1589.5942" targetFramework="net46" />
 </packages>
