Converted terraform.cpp and made it into part of World.cs

--- a/terrain-sharp/terrain-sharp.csproj
+++ b/terrain-sharp/terrain-sharp.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Source\World\Climate.cs" />
     <Compile Include="Source\World\Region.cs" />
     <Compile Include="Source\World\RegionFlag.cs" />
+    <Compile Include="Source\World\World.Terraform.cs" />
     <Compile Include="Source\World\World.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
