--- a/terrain-sharp/terrain-sharp.csproj
+++ b/terrain-sharp/terrain-sharp.csproj
@@ -256,6 +256,12 @@
     <Compile Include="Water.cs" />
     <Compile Include="World.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SDL2-CS\SDL2-CS.csproj">
+      <Project>{85480198-8711-4355-830e-72fd794ad3f6}</Project>
+      <Name>SDL2-CS</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
