--- a/FrontierSharp/packages.config
+++ b/FrontierSharp/packages.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="NLog" version="4.4.1" targetFramework="net461" />
+  <package id="NLog.Config" version="4.4.1" targetFramework="net461" />
+  <package id="NLog.Schema" version="4.4.1" targetFramework="net461" />
   <package id="OpenTK" version="2.0.0" targetFramework="net461" />
 </packages>
